# Elenchos

./: .env.example  .gitignore  Makefile  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.kiro/specs/elenchos/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
alembic/: env.py
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py
app/core/: config.py  logging.py  security.py
app/db/: base.py
app/models/: __init__.py  base.py  class_model.py  problem.py  session.py  skill.py  user.py
app/schemas/: user.py
app/services/: auth_service.py
docs/: SETUP.md  TASK_1_SUMMARY.md
docs/api/: README.md  ejemplos-registro.sh  registro-usuarios.md
scripts/: create_initial_migration.py  init_db.py  setup_database.py  verify_setup.py
tests/: test_auth_registration.py  test_infrastructure.py  test_property_data_persistence.py
