[tool.poetry]
name = "elenchos"
version = "0.1.0"
description = "Plataforma educativa con enfoque neuro-simbólico para ciencias exactas y programación"
authors = ["Elenchos Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.5.3"}
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
chromadb = "^0.4.22"
sympy = "^1.12"
redis = "^5.0.1"
celery = "^5.3.6"
sentence-transformers = "^2.3.1"
anthropic = "^0.8.1"
google-generativeai = "^0.3.2"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
numpy = "^1.26.3"
docker = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
httpx = "^0.26.0"
hypothesis = "^6.98.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
